--- a/index.html
+++ b/index.html
@@ -10,13 +10,35 @@
   <title>JS Practice</title>
 </head>
 <body>
-  <h1>JS Practice</h1>
-
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
+  <div class="container">
+    <div class="row">
+      <div class="col s12">
+        <div id="main" class="card">
+          <div class="card-content">
+            <span class="card-title">Task List</span>
+            <div class="row">
+              <form id="task">
+                <div class="input-field col s12">
+                  <input type="text" name="task" id="task">
+                  <label for="task">New Task</label>
+                </div>
+                <input type="submit" class="btn" value="Add Task">
+              </form>
+            </div>
+          </div>
+          <div class="card-action">
+            <h5 id="task-title">Tasks</h5>
+            <div class="input-field col s12">
+              <input type="text" name="filter" id="filter">
+              <label for="filter">Filter Tasks</label>
+            </div>
+            <ul class="collection"></ul>
+            <a href="" class="clear-tasks btn black">Clear Tasks</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.js"
